Move <object> generation into gemini-scrollbar
React gets hopelessly confused about the <object>s anyway, so we're better
off generating them in the gemini-scrollbar layer.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "license": "MIT",
   "homepage": "https://github.com/noeldelgado/react-gemini-scrollbar",
   "dependencies": {
-    "gemini-scrollbar": "1.x.x"
+    "gemini-scrollbar": "matrix-org/gemini-scrollbar#75aecd7"
   },
   "peerDependencies": {
     "react": "^0.14.0",
