--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "gemini-scrollbar": "matrix-org/gemini-scrollbar#91e1e566"
   },
   "peerDependencies": {
-    "prop-types": "^15.5.8",
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0"
+    "create-react-class": "^15.0.0",
+    "prop-types": "^15.0.0",
+    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
